# src/laravel/openapi/public-site.json
@@ -268,6 +268,14 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "name": "inline",
+                        "in": "query",
+                        "schema": {
+                            "type": "boolean",
+                            "default": false
+                        }
                     }
                 ],
                 "responses": {
